Customizing navigation bar

--- a/index.html
+++ b/index.html
@@ -10,18 +10,39 @@
     <!--Start of the navigation bar-->
     <nav>
         <div class="logo">
-            <h3>Moringa<span>School</span></h3>
+            <h3>Moringa <span style="color: rgb(48, 47, 47); font: weight 700px;">School</span></h3>
         </div>
      <!--Navigation to the right-->
      <div class="navbar">
          <ul>
-             <li></li>
-             <li></li>
-             <li></li>
-             <li></li>
+             <li>Courses</li>
+             <li>Our Projects</li>
+             <li>Stories</li>
+             <li><button class="but1">Enroll</button></li>
          </ul>
      </div>
     </nav>
+    <!--Begining of first section-->
+    <section id="sect1">
+        <div class="intro">
+            <div class="imageRight">
+                <img src="../IP1/assets/images/image1.png" alt="study">
+            </div>
+            <div class="introCon">
+                <h4>Moringa</h4>
+                <h2>Nurturing Africa's Tech Talent</h2>
+                <p>Through market-aligned skills training, we help learners build new career possibilities with greater confidence and capability.</p>
+            </div>
+            <div class="introBut">
+                <ul>
+                    <li><button>Enroll Now</button></li>
+                    <li><button>EXplore</button></li>
+                </ul>
+            </div>
+
+        </div>
+  
+    </section>
 
 </body>
 </html>
