Creating the second section;Adding Header 1 and 2; Changing colour of the 1st and 2nd button;Aligning the image to center

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="sect1">
         <div class="intro">
             <div class="imageRight">
-                <img src="../IP1/assets/images/image1.png" alt="study">
+                <img src="/assets/images/image1.png" alt="study">
             </div>
             <div class="introCon">
                 <h4>Moringa</h4>
@@ -35,14 +35,14 @@
             </div>
             <div class="introBut">
                 <ul>
-                    <li><button>Enroll Now</button></li>
-                    <li><button>EXplore</button></li>
+                    <li><button class="introBut1">Enroll Now</button></li>
+                    <li><button class="introBut2" >Explore</button></li>
                 </ul>
             </div>
 
         </div>
   
     </section>
-
+<!--End of the first section-->
 </body>
 </html>
