--- a/index.html
+++ b/index.html
@@ -41,8 +41,29 @@
             </div>
 
         </div>
-  
+  <!--End of the first section-->
     </section>
-<!--End of the first section-->
+    <!--Starting of the second section-->
+    <div class="stories">
+        <h2 style="margin-left: 20px;">Stories <span style="font-size: small; font-weight: lighter;">So many memories.</span></h2>
+        <div>
+          <div class="orientation">
+            <div style="display: inline; vertical-align: top; width: 50%; padding-left: 10px;">
+              <img src="assets/images/image 2.png" alt="stories">
+            </div>
+            <div style="display: inline-block; margin-left:40px; width: 45%;">
+              <h3>Orientation day</h3>
+              <p>The orientation day at Moringa school is motst important first day you can ever hope for. You are taken through all the rules while
+                at the school, the do's and dont's and what is expected of you to achieve success and become a top-notch software developer. Don't 
+                even think about missing this important/special day for the start for a long and productive journer.
+              </p>
+              <button type="button">See Album</button>
+            </div>
+          </div>
+        </div>
+  
+<!--Ending of the second section-->
+
+</section>
 </body>
 </html>
