Creating the third section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
         </div>
   
 <!--Ending of the second section-->
+</section>
+<section>
+    <!--Start of the third section-->
 
 </section>
 </body>
