--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
 </section>
 <section>
     <!--Start of the third section-->
-
+ <div class="sect3">
+     
+ </div>
 </section>
 </body>
 </html>
